5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1635_869.log
== TEST (2019-04-12 00:31:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

valor=float(input("Digite o valor do produto: "))

eq=valor-5%

	print("O valor a ser pago com desconto é ",eq)

-- ERROR:
File "XXXX", line 7
    eq=valor-5%
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:32:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

valor=float(input("Digite o valor do produto: "))

eq=valor-5%

	print("O valor a ser pago com desconto é "eq)

-- ERROR:
File "XXXX", line 7
    eq=valor-5%
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:34:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

valor=float(input("Digite o valor do produto: "))

desconto= valor*5/100
novovalor= valor-desconto
	print("O valor a ser pago com desconto é "novovalor)

-- ERROR:
File "XXXX", line 9
    print("O valor a ser pago com desconto é "novovalor)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:34:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

valor=float(input("Digite o valor do produto: "))

desconto= valor*5/100
novovalor= valor-desconto
	print("O valor a ser pago com desconto é ",novovalor)

-- ERROR:
File "XXXX", line 9
    print("O valor a ser pago com desconto é ",novovalor)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:34:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

valor=float(input("Digite o valor do produto: "))

desconto= valor*5/100
novovalor= valor-desconto
	print("O valor a ser pago com desconto é ", novovalor)

-- ERROR:
File "XXXX", line 9
    print("O valor a ser pago com desconto é ", novovalor)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:35:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

valor=float(input("Digite o valor do produto: "))

desconto= valor*5/100
novovalor= valor-desconto
	print("O valor a ser pago com desconto e ", novovalor)

-- ERROR:
File "XXXX", line 9
    print("O valor a ser pago com desconto e ", novovalor)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:35:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

valor=float(input("Digite o valor do produto: "))

desconto= valor*5/100
novovalor= valor-desconto
print("O valor a ser pago com desconto e ", novovalor)

-- OUTPUT:
O valor a ser pago com desconto e  190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 00:37:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

valor=float(input("Digite o valor do produto: "))

desconto= valor*5/100
novovalor= valor-desconto
print("O valor a ser pago com desconto e ", novovalor)

-- EXECUTION TIME:
0.168865
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
O valor a ser pago com desconto e  190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
O valor a ser pago com desconto e  190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:37:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

valor=float(input("Digite o valor do produto: "))

desconto= valor*5/100
novovalor= valor-desconto
print("O valor a ser pago com desconto e ", novovalor)

-- OUTPUT:
O valor a ser pago com desconto e  190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:38:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

valor=float(input("Digite o valor do produto: "))

desconto= valor*5/100
novovalor= valor-desconto
novovalor=float
print("O valor a ser pago com desconto e ", novovalor)

-- OUTPUT:
O valor a ser pago com desconto e  <class 'float'>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:38:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

valor=float(input("Digite o valor do produto: "))
novovalor=float
desconto= valor*5/100
novovalor= valor-desconto

print("O valor a ser pago com desconto e ", novovalor)

-- OUTPUT:
O valor a ser pago com desconto e  190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 00:38:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

valor=float(input("Digite o valor do produto: "))
novovalor=float
desconto= valor*5/100
novovalor= valor-desconto

print("O valor a ser pago com desconto e ", novovalor)

-- EXECUTION TIME:
0.181166
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
O valor a ser pago com desconto e  190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
O valor a ser pago com desconto e  190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 02:07:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

valor=float(input("Digite o valor do produto: "))

desconto= valor*5/100
novovalor= valor-desconto

print("O valor a ser pago com desconto e ", novovalor)

-- OUTPUT:
O valor a ser pago com desconto e  190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 02:09:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

valor=float(input("Digite o valor do produto: "))

desconto= valor*5/100
novovalor= valor-desconto

print(round(x,2("O valor a ser pago com desconto e ", novovalor)

-- EXECUTION TIME:
0.162751
-- ERROR:
  File "/home/codebench/codes/1635/869/main.py", line 11
    
                                                                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 02:09:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

valor=float(input("Digite o valor do produto: "))

desconto= valor*5/100
novovalor= valor-desconto

print(round(x,2("O valor a ser pago com desconto e ", novovalor)

-- ERROR:
File "XXXX", line 11
    
                                                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 02:09:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

valor=float(input("Digite o valor do produto: "))

desconto= valor*5/100
novovalor= valor-desconto

print(round(x,2("O valor a ser pago com desconto e ", novovalor)
-- EXECUTION TIME:
0.208612
-- ERROR:
  File "/home/codebench/codes/1635/869/main.py", line 11
    
                                                                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 02:10:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

valor=float(input("Digite o valor do produto: "))

desconto= valor*5/100
novovalor= valor-desconto

print(round(x,2("O valor a ser pago com desconto e ", novovalor)
-- ERROR:
File "XXXX", line 11
    
                                                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 02:10:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

valor=float(input("Digite o valor do produto: "))

desconto= valor*5/100
novovalor= valor-desconto

print(round(x,2("O valor a ser pago com desconto e ", novovalor)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(x,2("O valor a ser pago com desconto e ", novovalor)))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 02:14:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

valor=float(input("Digite o valor do produto: "))
if(valor>=200):
	desconto= valor*5/100

novovalor= valor-desconto

print(round(x,2("O valor a ser pago com desconto e ", novovalor)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(x,2("O valor a ser pago com desconto e ", novovalor)))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 02:15:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

valor=float(input("Digite o valor do produto: "))
if(valor>=200):
	desconto= valor*5/100

novovalor= valor-desconto

print(valor,2)
-- OUTPUT:
200.09 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 02:15:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

valor=float(input("Digite o valor do produto: "))
if(valor>=200):
	desconto= valor*5/100

novovalor= valor-desconto

print(valor,2)
-- EXECUTION TIME:
0.174841
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
200.09 2
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
200.53 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 02:15:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

valor=float(input("Digite o valor do produto: "))
if(valor>=200):
	desconto= valor*5/100

novovalor= valor-desconto

print(valor,2)
-- OUTPUT:
200.09 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:49:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

valor=float(input("Valor: "))
desconto = valor*0.05
valorpago = valor - desconto

if(valor>=200):
	print(round(valorpago, 2))
else:
	print(round(valor, 2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 10:49:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

valor=float(input("Valor: "))
desconto = valor*0.05
valorpago = valor - desconto

if(valor>=200):
	print(round(valorpago, 2))
else:
	print(round(valor, 2))
-- EXECUTION TIME:
0.228132
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
